Add Add_Users and Area_Audit_Removal scripts, update UI

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,6 +55,8 @@ body {
     border-radius: 4px;
     font-size: 14px;
     background-color: #fafafa;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .console-content {
